AAE-38730 Upgrade Activiti to Java 25 (#5185)
* AAE-38730 Upgrade Activiti to Java 25

* AAE-38730 Fix pre checks

* AAE-38730 Fix pre checks

* AAE-38730 Fix pre checks

* AAE-38730 Open rewrite changes

* Sync with 25 rewrites

* temurin to corretto

* Use explicit Activiti JUEL expression factory implementation

---------

Co-authored-by: Igor Dianov <igor@dianov.com>