@@ -221,7 +221,7 @@ public class EndExecutionOperation extends AbstractOperation {
                         for (BoundaryEvent boundaryEvent : subActivity.getBoundaryEvents()) {
                             if (
                                 CollectionUtil.isNotEmpty(boundaryEvent.getEventDefinitions()) &&
-                                boundaryEvent.getEventDefinitions().get(0) instanceof CompensateEventDefinition
+                                boundaryEvent.getEventDefinitions().getFirst() instanceof CompensateEventDefinition
                             ) {
                                 hasCompensation = true;
                                 break;
