@@ -49,7 +49,7 @@ public class CustomFlowExecutionListenerTest extends ResourceActivitiTestCase {
         @SuppressWarnings("unchecked")
         List<String> conditions = (List<String>) variable.getValue();
         assertThat(conditions).hasSize(2);
-        assertThat(conditions.get(0)).isEqualTo("hello");
+        assertThat(conditions.getFirst()).isEqualTo("hello");
         assertThat(conditions.get(1)).isEqualTo("world");
     }
 }
