@@ -59,7 +59,7 @@ public class CatchEventJsonConverter extends BaseBpmnJsonConverter {
             return STENCIL_EVENT_CATCH_TIMER;
         }
 
-        EventDefinition eventDefinition = eventDefinitions.get(0);
+        EventDefinition eventDefinition = eventDefinitions.getFirst();
         if (eventDefinition instanceof MessageEventDefinition) {
             return STENCIL_EVENT_CATCH_MESSAGE;
         } else if (eventDefinition instanceof SignalEventDefinition) {
