@@ -53,7 +53,7 @@ public class MyTransactionalOperationTransactionDependentTaskListener
             List<HistoricProcessInstance> historicProcessInstances = historyService
                 .createHistoricProcessInstanceQuery()
                 .list();
-            historyService.deleteHistoricProcessInstance(historicProcessInstances.get(0).getId());
+            historyService.deleteHistoricProcessInstance(historicProcessInstances.getFirst().getId());
         }
     }
 }
